--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="utf-8">
-  <title>ProjectManagementPwa</title>
+  <title>Wone IT - Business Solutions - Project Management</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="icon" type="image/png" href="favicon.ico?v=4">
+  <link rel="apple-touch-icon" href="assets/wone-it-logo.png?v=3">
+  <link rel="manifest" href="assets/manifest.webmanifest">
+  <meta name="theme-color" content="#3b82f6">
+  <meta name="description" content="Система управления проектами и бизнес-аналитики от Wone IT">
+  <meta name="author" content="Andrey Erofev">
 </head>
 <body>
   <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
