--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <title>Wone IT - Business Solutions - Project Management</title>
+  <title>Wone IT - Project Control Center</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="favicon.ico?v=4">
-  <link rel="apple-touch-icon" href="assets/wone-it-logo.png?v=3">
+  <link rel="icon" type="image/x-icon" href="favicon.ico?v=4">
+  <link rel="apple-touch-icon" href="assets/wone-it-logo.svg?v=3">
   <link rel="manifest" href="assets/manifest.webmanifest">
   <meta name="theme-color" content="#3b82f6">
   <meta name="description" content="Система управления проектами и бизнес-аналитики от Wone IT">
