--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="Система управления проектами и бизнес-аналитики от Wone IT">
   <meta name="author" content="Andrey Erofev">
 </head>
-<body>
+<body class="compact-app">
   <app-root></app-root>
 </body>
 </html>
